nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: nginx
  namespace: default
  name: nginx-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      run: nginx
  template:
    metadata:
      labels:
        run: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
