internal-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colacao
  namespace: default
spec:
  rules:
  - host: colacao-dev.unifor.br
    http:
      paths:
      - backend:
          service:
            name: colacao
            port:
              number: 3000
        path: /
        pathType: Prefix
